--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                         <p style="margin: 0; font-size: 0.85rem; color: #cc6666; line-height: 1.6;">
                             <b style="color: var(--accent-red); font-family: 'Orbitron';">[!] SYSTEM NOTICE</b><br>
                             강시현은 현재 당신의 실시간 동선과 소비 내역을 모니터링 중입니다. 
-                            과도한 저항은 더 강력한 통제(Phase 02)를 초래할 수 있음을 경고합니다.
+                            과도한 저항은 더 강력한 통제를 초래할 수 있음을 경고합니다.
                         </p>
                     </div>
                 </div>
@@ -242,7 +242,7 @@
                     <span id="toggle-icon" style="color: var(--neon-blue);">[+] 열람하기</span>
                 </div>
                 <div id="storyContent" class="story-content">
-                    <p><b>Phase 1. 이별의 상흔:</b> 초등학교 4학년, 이삿짐 트럭의 소음 속에서 당신의 이름을 부르며 울던 시현에게 당신은 단순한 친구 그 이상이었습니다. 그녀의 10대는 다시 만날 당신에게 어울리는 사람이 되기 위한 치열한 준비 과정이었습니다.</p>
+                    <p><b>Phase 1. 이별의 상흔:</b> 초등학교 5학년, 이삿짐 트럭의 소음 속에서 당신의 이름을 부르며 울던 시현에게 당신은 단순한 친구 그 이상이었습니다. 그녀의 10대는 다시 만날 당신에게 어울리는 사람이 되기 위한 치열한 준비 과정이었습니다.</p>
                     <p><b>Phase 2. 뒤틀린 재회:</b> 24세, 성공적인 커리어를 쌓은 시현이 수소문 끝에 당신의 문을 열었을 때 마주한 것은, 곰팡이 핀 자취방과 초점 잃은 당신의 눈이었습니다. 그녀가 12년간 신성시해온 첫사랑의 상징이 오염되는 순간이었습니다.</p>
                     <p><b>Phase 3. 강제 복구 프로세스:</b> 시현은 당신을 원망하는 대신, 당신을 다시 '완벽하게' 재조립하기로 결심했습니다. 당신의 지문이 닿는 도어락 비밀번호부터 매일 마시는 커피 한 잔까지, 이제 모든 주권은 그녀에게 귀속됩니다.</p>
                 </div>
@@ -276,17 +276,49 @@
         </div>
     </section>
 
-    <!-- [섹션 4] 개발자 노트 -->
+    <!-- [섹션 4] 플레이 가이드 (개발자 노트 대체) -->
     <section id="devnote" style="background: rgba(255,255,255,0.01);">
         <div class="container">
-            <h2 class="section-title">Developer Note</h2>
+            <h2 class="section-title">Play Strategy</h2>
             <div class="dev-box" style="padding: 35px; background: var(--glass-bg); border-radius: 20px; border-left: 5px solid var(--neon-blue);">
-                <p style="color: #bbb; margin: 0 0 20px 0;"><b>Update Log:</b> 2024.03.22 - UI 최적화 및 강시현(24세) 프로필 고도화 완료.</p>
-                <p style="color: #888; font-size: 0.95rem; line-height: 1.8;">
-                    본 캐릭터 시트는 '집착'과 '애정' 사이의 서늘한 긴장감을 컨셉으로 제작되었습니다. <br>
-                    강시현은 당신의 몰락을 비난하면서도, 결코 당신을 떠나지 못하는 모순된 감정을 품고 있습니다. 
-                    그녀의 차가운 통제가 단순한 괴롭힘인지, 아니면 그녀만의 뒤틀린 구원 방식인지 대화를 통해 확인해 보시기 바랍니다.
+                <p style="color: var(--neon-blue); font-family: 'Orbitron'; font-weight: bold; margin: 0 0 25px 0; letter-spacing: 2px;">
+                    >> SELECT YOUR STORYLINE
                 </p>
+
+                <!-- 루트 1 -->
+                <div style="margin-bottom: 30px;">
+                    <h4 style="color: #fff; font-size: 1.1rem; margin-bottom: 10px; display: flex; align-items: center;">
+                        <span style="margin-right: 10px;">🛠️</span> 인생 복구: 당신의 가치를 다시 증명하세요
+                    </h4>
+                    <p style="color: #999; font-size: 0.9rem; line-height: 1.7; margin: 0; padding-left: 34px;">
+                        그녀가 기억하는 '빛나던 소꿉친구'의 모습으로 돌아가기 위해 노력해 보세요. 시현의 차가운 통제는 사실 당신을 예전의 모습으로 돌려놓고 싶어 하는 뒤틀린 애정의 표현일지도 모릅니다. 무너진 일상을 재건하며 그녀의 진심 어린 미소를 다시 찾아주는 루트입니다.
+                    </p>
+                </div>
+
+                <!-- 루트 2 -->
+                <div style="margin-bottom: 30px;">
+                    <h4 style="color: #fff; font-size: 1.1rem; margin-bottom: 10px; display: flex; align-items: center;">
+                        <span style="margin-right: 10px;">⛓️</span> 완전 종속: 그녀의 완벽한 '소장품'이 되시겠습니까?
+                    </h4>
+                    <p style="color: #999; font-size: 0.9rem; line-height: 1.7; margin: 0; padding-left: 34px;">
+                        저항을 포기하고 그녀가 설계한 완벽한 통제 속에 몸을 맡겨보세요. 먹는 것, 입는 것, 자는 시간까지 그녀의 지시대로 움직이는 삶. 당신이 스스로를 포기할수록 그녀의 독점욕은 더욱 짙어질 것입니다. 이 기묘한 '압류' 관계를 끝까지 밀어붙여 보는 루트입니다.
+                    </p>
+                </div>
+
+                <!-- 루트 3 -->
+                <div>
+                    <h4 style="color: #fff; font-size: 1.1rem; margin-bottom: 10px; display: flex; align-items: center;">
+                        <span style="margin-right: 10px;">🔍</span> 빈틈 공략: 가면 뒤에 숨겨진 '초조함'을 파헤치세요
+                    </h4>
+                    <p style="color: #999; font-size: 0.9rem; line-height: 1.7; margin: 0; padding-left: 34px;">
+                        완벽해 보이는 그녀의 감시망에도 분명 허점은 있습니다. 당신을 압류하겠다며 오만하게 굴지만, 사실 그녀는 당신이 다시 사라질까 봐 누구보다 두려워하고 있습니다. 그녀의 강박적인 통제 원인이 '버림받기에 대한 공포'라는 것을 눈치챈다면... 주도권을 역전시킬 수 있을지도 모릅니다.
+                    </p>
+                </div>
+
+                <!-- 하단 맺음말 -->
+                <div style="margin-top: 40px; padding-top: 20px; border-top: 1px solid rgba(255,255,255,0.05); color: #666; font-size: 0.85rem; font-style: italic;">
+                    "어떤 길을 선택하든, 결과에 대한 책임은 당신의 몫입니다. 행운을 빕니다."
+                </div>
             </div>
         </div>
     </section>
